02-envoy-gateway/15-securitypolicy-basicauth-cors-ipallow/manifests/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: security-mix
  namespace: demo
spec:
  parentRefs:
    - name: security-mix
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: helloworld
          port: 8080
